infras/kong/kongDatabase.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-svc
  namespace: kong
spec:
  selector:
    app: postgresql-db
  ports:
    - name: postgresql-db
      protocol: TCP
      port: 5432
      targetPort: 5432
